--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -2,6 +2,28 @@
 
 {% block content %}
 
-<h1>hello world</h1>
+{% if user.is_authenticated %}
+<h1>Hello User!</h1>
+
+{% else %}
+<div class="col-md-6 offset-md-3">
+    <h1>Login</h1>
+    <br>
+    <form method="POST" action="{% url 'home' %}">
+        {% csrf_token %}
+        <form>
+          <div class="mb-3">
+            <input type="text" class="form-control" name="username", placeholder="Username" required>
+          </div>
+          <div class="mb-3">
+            <input type="password" class="form-control" name="password", placeholder="Passowrd" required>
+          </div>
+          <button type="submit" class="btn btn-secondary">Login</button>
+        </form>
+
+    </form>
+</div>
+
+{% endif %}
 
 {% endblock %}
